# sik-sort

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MIGRATION_TO_UV.md  README.md  UV_QUICK_REFERENCE.md  pyproject.toml
.github/workflows/: test.yml
.hypothesis/constants/: 004e722d2b39195a  006b559781a41f7f  02eceb2fd2d826c2  041b82baf95116f0  0588a2471da78b21  05fa4cc92e6cf8a8  067138e1b3a4ebbd  07475514dc0bbadb  09ae28b390a241d0  0a174ab092bdf149  0c422ca84787c26b  0cfa12dfbf9e9abb  100da2413d65b0b1  110a1d1d892c7388  118480740acbcd3c  11a4fb9bf042a054  11e12b17120b2c95  1272c7bb27015196  127e8fa3efd6a7b8  13efa0910df75e7a  146ce438f76c65d3  161b8e1ee81d034f  1711dca7bbb78b0f  18baa06439e76d96  1a51c14370129ae1  1a5326b88fdd03ad  1b03421aacbc7cd8  1cfc97167b9009fb  1d45cef60f923b7c  1dc359315dc82348  1ee63bd4ce58fc92  1f4b62403fde35c2  1f78e9924d375ff1  219385b4acf67710  2196e604560785f8  22aee50d81961c02  24226955ac958b3b  24b63b5fc802a433  25878421010898fc  2ae14f7c2efda9dc  (+169 more)
.hypothesis/tmp/: tmp31paxv0w  tmp3i_6u3a4  tmp40waa5gx  tmp4q0iz8_c  tmpa5rdmpfh  tmpalz5iehh  tmpb36yzlzh  tmpbjiyqwj0  tmpds6_gxah  tmpf6o5fnoa  tmpiot2h4lr  tmpjpvom3uc  tmpknc9p95u  tmpn1ydrydd  tmpnqclxrw2  tmpoaoobep8  tmppjno2e92  tmpqnjv3tm_  tmpxv651gpz  tmpy_v45k1y
scripts/: migrate_to_uv.ps1  migrate_to_uv.sh
sik_sort/: cleaner.py  cli.py  config.py  date_classifier.py  duplicates.py  filters.py  main.py  operation_logger.py  scanner.py  size_classifier.py  sorter.py
sik_sort.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sik_sort/sik_sort.egg-info/: requires.txt  top_level.txt
src/: __init__.py  classifier.py  cleaner.py  safety.py
src/sik_sort.egg-info/: SOURCES.txt
tests/: __init__.py  test_ascii_progress_properties.py  test_classifier_properties.py  test_cleaner_properties.py  test_cli_args_properties.py  test_cli_properties.py  test_config_properties.py  test_date_classifier_properties.py  test_dry_run_properties.py  test_duplicates_properties.py  test_filter_properties.py  test_main_properties.py  test_operation_logger_properties.py  test_scanner_properties.py  test_size_classifier_properties.py  test_sorter_archive_properties.py  test_sorter_date_properties.py  test_sorter_properties.py  test_sorter_size_properties.py
(+340 files in other folders)
