[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sik-sort"
version = "0.1.0"
description = "A command-line utility for organizing files into categorized folders based on file type"
authors = [{name = "Sik Sort Team", email = "team@siksort.example.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["file-organizer", "cli", "file-management", "sorting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]

[project.scripts]
sik = "sik_sort.main:main"

[tool.hatch.build.targets.wheel]
packages = ["sik_sort"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "hypothesis>=6.0.0",
]
